--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,7 @@
-cmake_minimum_required(VERSION 3.5.0)
+cmake_minimum_required(VERSION 3.10)
 project(kv_db)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(kv_db main.cpp)
+add_subdirectory(src)
+add_subdirectory(tests)
